Add numpy dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ packages = find:
 python_requires = >=3.6
 install_requires =
     enviroplus >=0.0.6
+    numpy >= 1.26.0
 
 [options.packages.find]
 where = src
