Add smbus dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ python_requires = >=3.6
 install_requires =
     enviroplus >=0.0.6
     numpy >= 1.26.0
+    smbus2 >= 0.4.3
 
 [options.packages.find]
 where = src
